--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@
 
 language: objective-c
 
-before_install: 
-gem install cocoapods -v '>= 0.34.0'
-cd Example && pod install && cd -
+before_install: gem install cocoapods -v '>= 0.34.0'
+before_install: cd Example && pod install && cd -
 
 script:
 - xctool test -workspace Example/MLNetworkLogger.xcworkspace -scheme MLNetworkLogger -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
